[package]
name = "selection"
authors = ["Borber"]
description = "Get the text selected by the cursor"
repository = "https://github.com/Borber/selection"
keywords = ["selection", "linux", "windows", "macos"]
categories = ["gui"]
license = "GPL-3.0-only"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
rdev = { git = "https://github.com/Narsil/rdev.git" }
arboard = "3"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
wl-clipboard-rs = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
accessibility-ng = "0.1"
accessibility-sys-ng = "0.1"
